[gd_scene load_steps=3 format=2]

[ext_resource path="res://Game/Datapacks/UI/PackVarUIs/PersonalityStatVarUI.gd" type="Script" id=1]
[ext_resource path="res://GlobalTheme.tres" type="Theme" id=2]

[node name="PersonalityStatVarUI" type="HBoxContainer"]
margin_right = 1280.0
margin_bottom = 16.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_top = -1.0
margin_right = 70.4
margin_bottom = 24.4
text = "Kindness"

[node name="VSeparator" type="VSeparator" parent="."]
margin_left = 73.0
margin_right = 77.0
margin_bottom = 25.0

[node name="Label3" type="Label" parent="."]
margin_left = 80.0
margin_top = -1.0
margin_right = 126.4
margin_bottom = 24.4
text = "Mean"

[node name="HSlider" type="HSlider" parent="."]
margin_left = 129.0
margin_right = 1144.0
margin_bottom = 13.0
size_flags_horizontal = 3
min_value = -1.0
max_value = 1.0
step = 0.01
scrollable = false

[node name="Label2" type="Label" parent="."]
margin_left = 1147.0
margin_top = -1.0
margin_right = 1185.4
margin_bottom = 24.4
text = "Kind"

[node name="VSeparator2" type="VSeparator" parent="."]
margin_left = 1188.0
margin_right = 1192.0
margin_bottom = 25.0

[node name="Label4" type="Label" parent="."]
margin_left = 1195.0
margin_top = -1.0
margin_right = 1280.4
margin_bottom = 24.4
text = "0.3 = Mean"

[connection signal="drag_ended" from="HSlider" to="." method="_on_HSlider_drag_ended"]
[connection signal="value_changed" from="HSlider" to="." method="_on_HSlider_value_changed"]
